Rebrand to Ribbon and Cotton

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="join-members.css">
         <link rel="stylesheet" href="app.css">
     </head>
     <body>
@@ -16,12 +17,15 @@
         
         <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
         <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+        <script crossorigin src="https://www.unpkg.com/browse/react-router@6.8.2/dist/umd/react-router.development.js"></script>
+        <script crossorigin src="https://www.unpkg.com/browse/react-router-dom@6.8.2/dist/umd/react-router-dom.development.js"></script>
         <!-- <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
         <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script> -->
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script type="text/babel" src="global.js"></script>
         <script type="text/babel" src="const.js"></script>
+        <script type="text/babel" src="join-members.js"></script>
         <script type="text/babel" src="main.js"></script>
     </body>
 </html>
