--- a/join-members.html
+++ b/join-members.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="app.css">
+        <link rel="stylesheet" href="join-members.css">
     </head>
     <body>
         <div id="root">
@@ -18,8 +18,8 @@
         <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="korean-regexp.js"></script>
         <script type="text/babel" src="const.js"></script>
-        <script type="text/babel" src="rewards.js"></script>
-        <script type="text/babel" src="main.js"></script>
+        <script type="text/babel" src="join-members.js"></script>
     </body>
 </html>
