--- a/join-members.html
+++ b/join-members.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Ribbon 행운상점</title>
         <meta name="description" content="">
-        <meta name="viewport" content="initial-scale=1, viewport-fit=cover">
+        <meta name="viewport" content="initial-scale=1,use-scalable=no,maximum-scale=1,width=device-width,viewport-fit=cover">
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="join-members.css">
     </head>
